# onetagger-platform-template

./: Cargo.toml  README.md  info.json
.github/workflows/: build.yml
src/: lib.rs
