[package]
name = "my-platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]

# log is required!
log = "0.4"

onetagger-tagger = { git = "https://github.com/Marekkon5/onetagger.git" }

[profile.release]
strip = true
opt-level = "z"